crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__function_ambiguous_sequence.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n  fn foo_1() {\n    let a = bar\n    (40)\n  }\n\n  fn foo_2() {\n    let a = bar\n    {40}\n  }\n\n  fn foo_3() {\n    let a = (40+2)\n  }\n\n  fn foo_4() {\n    let a = bar(42)\n    (a + 14) * 42\n  }\n    "
info: function_ambiguous_sequence
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: Sequence {
                    location: 15..32,
                    expressions: [
                        Assignment {
                            location: 15..26,
                            value: Var {
                                location: 23..26,
                                name: "bar",
                            },
                            pattern: Var {
                                location: 19..20,
                                name: "a",
                            },
                            kind: Let,
                            annotation: None,
                        },
                        Int {
                            location: 30..32,
                            value: "40",
                            base: Decimal {
                                numeric_underscore: false,
                            },
                        },
                    ],
                },
                doc: None,
                location: 0..10,
                name: "foo_1",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 34,
                can_error: true,
            },
        ),
        Fn(
            Function {
                arguments: [],
                body: Sequence {
                    location: 52..69,
                    expressions: [
                        Assignment {
                            location: 52..63,
                            value: Var {
                                location: 60..63,
                                name: "bar",
                            },
                            pattern: Var {
                                location: 56..57,
                                name: "a",
                            },
                            kind: Let,
                            annotation: None,
                        },
                        Int {
                            location: 67..69,
                            value: "40",
                            base: Decimal {
                                numeric_underscore: false,
                            },
                        },
                    ],
                },
                doc: None,
                location: 37..47,
                name: "foo_2",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 71,
                can_error: true,
            },
        ),
        Fn(
            Function {
                arguments: [],
                body: Assignment {
                    location: 89..103,
                    value: BinOp {
                        location: 98..102,
                        name: AddInt,
                        left: Int {
                            location: 98..100,
                            value: "40",
                            base: Decimal {
                                numeric_underscore: false,
                            },
                        },
                        right: Int {
                            location: 101..102,
                            value: "2",
                            base: Decimal {
                                numeric_underscore: false,
                            },
                        },
                    },
                    pattern: Var {
                        location: 93..94,
                        name: "a",
                    },
                    kind: Let,
                    annotation: None,
                },
                doc: None,
                location: 74..84,
                name: "foo_3",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 104,
                can_error: true,
            },
        ),
        Fn(
            Function {
                arguments: [],
                body: Sequence {
                    location: 122..153,
                    expressions: [
                        Assignment {
                            location: 122..137,
                            value: Call {
                                arguments: [
                                    CallArg {
                                        label: None,
                                        location: 134..136,
                                        value: Int {
                                            location: 134..136,
                                            value: "42",
                                            base: Decimal {
                                                numeric_underscore: false,
                                            },
                                        },
                                    },
                                ],
                                fun: Var {
                                    location: 130..133,
                                    name: "bar",
                                },
                                location: 130..137,
                            },
                            pattern: Var {
                                location: 126..127,
                                name: "a",
                            },
                            kind: Let,
                            annotation: None,
                        },
                        BinOp {
                            location: 141..153,
                            name: MultInt,
                            left: BinOp {
                                location: 141..147,
                                name: AddInt,
                                left: Var {
                                    location: 141..142,
                                    name: "a",
                                },
                                right: Int {
                                    location: 145..147,
                                    value: "14",
                                    base: Decimal {
                                        numeric_underscore: false,
                                    },
                                },
                            },
                            right: Int {
                                location: 151..153,
                                value: "42",
                                base: Decimal {
                                    numeric_underscore: false,
                                },
                            },
                        },
                    ],
                },
                doc: None,
                location: 107..117,
                name: "foo_4",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 154,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
