crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__function_def.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n        fn foo() {}\n    "
info: function_def
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: Trace {
                    kind: Todo,
                    location: 0..11,
                    then: ErrorTerm {
                        location: 0..11,
                    },
                    text: String {
                        location: 0..11,
                        value: "aiken::todo",
                    },
                },
                doc: None,
                location: 0..8,
                name: "foo",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 10,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
