crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__if_expression.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n        fn ifs() {\n          if True {\n            1 + 1\n          } else if a < 4 {\n            5\n          } else if a || b {\n            6\n          } else {\n            3\n          }\n        }\n    "
info: if_expression
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: If {
                    location: 13..106,
                    branches: [
                        IfBranch {
                            condition: Var {
                                location: 16..20,
                                name: "True",
                            },
                            body: BinOp {
                                location: 27..32,
                                name: AddInt,
                                left: Int {
                                    location: 27..28,
                                    value: "1",
                                    base: Decimal {
                                        numeric_underscore: false,
                                    },
                                },
                                right: Int {
                                    location: 31..32,
                                    value: "1",
                                    base: Decimal {
                                        numeric_underscore: false,
                                    },
                                },
                            },
                            location: 16..36,
                        },
                        IfBranch {
                            condition: BinOp {
                                location: 45..50,
                                name: LtInt,
                                left: Var {
                                    location: 45..46,
                                    name: "a",
                                },
                                right: Int {
                                    location: 49..50,
                                    value: "4",
                                    base: Decimal {
                                        numeric_underscore: false,
                                    },
                                },
                            },
                            body: Int {
                                location: 57..58,
                                value: "5",
                                base: Decimal {
                                    numeric_underscore: false,
                                },
                            },
                            location: 45..62,
                        },
                        IfBranch {
                            condition: BinOp {
                                location: 71..77,
                                name: Or,
                                left: Var {
                                    location: 71..72,
                                    name: "a",
                                },
                                right: Var {
                                    location: 76..77,
                                    name: "b",
                                },
                            },
                            body: Int {
                                location: 84..85,
                                value: "6",
                                base: Decimal {
                                    numeric_underscore: false,
                                },
                            },
                            location: 71..89,
                        },
                    ],
                    final_else: Int {
                        location: 101..102,
                        value: "3",
                        base: Decimal {
                            numeric_underscore: false,
                        },
                    },
                },
                doc: None,
                location: 0..8,
                name: "ifs",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 107,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
