crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__import_alias.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n        use std/tx as t\n    "
info: import_alias
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Use(
            Use {
                as_name: Some(
                    "t",
                ),
                location: 0..15,
                module: [
                    "std",
                    "tx",
                ],
                package: (),
                unqualified: [],
            },
        ),
    ],
    kind: Validator,
}
