crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__int_parsing_hex_bytes.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n          fn foo() {\n            #[ 0x01, 0xa2, 0x03 ]\n          }\n    "
info: int_parsing_hex_bytes
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: ByteArray {
                    location: 13..34,
                    bytes: [
                        1,
                        162,
                        3,
                    ],
                    preferred_format: ArrayOfBytes(
                        Hexadecimal,
                    ),
                },
                doc: None,
                location: 0..8,
                name: "foo",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 35,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
